Fixed broken CSS for footer

--- a/frontend/src/components/scss/_base.scss
+++ b/frontend/src/components/scss/_base.scss
@@ -10,7 +10,7 @@ h2 {
     flex-direction: column;
     min-height: 100vh;
     .header2 {
-      background:  	#4caf50;
+      background:  	rgb(51, 92, 207);
     }
     .main2 {
       flex: 1;
