--- a/frontend/src/components/scss/_calculator.scss
+++ b/frontend/src/components/scss/_calculator.scss
@@ -1,7 +1,7 @@
 .calculator {
     display: grid;
     grid-gap: 1rem;
-    background: #4caf50;
+    background: rgb(51, 92, 207);
     padding: 1rem;
     @include bp(med) {
       grid-template-columns: 3fr 1fr 3fr;
