--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -259,22 +259,28 @@ section.intro {
 }
 
 footer {
-  padding: 120px 0;
+  padding: 400px 0;
   text-align: center;
 }
 
-footer *{
+footer {
   width: 60%;
   margin: 0 auto;
+  text-align: center;
 }
 
 footer ul {
-  display: grid;
+  
+  display:inline;
+  text-align: center;
   grid-template-columns: repeat(3, 1fr);
   width: 40%;
 }
 
+
+
 footer ul li {
+  text-align: center;
   list-style: none;
 }
 
@@ -282,6 +288,7 @@ footer ul li a {
   display: block;
   font-size: 1.4rem;
   color: #fff;
+  text-align: center;
 }
 
 section div form {
